# product-stock-checker

./: .gitignore  README.md  pyproject.toml
deploy/: create_lambda.sh  update_lambda.sh
deploy/policies/: role_policy.json
src/product_stock_check/: __init__.py  check_products.py  lambda_function.py  util.py
src/product_stock_check/products/: README.md  __init__.py  a_f_pants.py
test/: test_lambda.py  test_products.py  test_util.py
